<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_black_48dp"
        android:title="@string/title_menu"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_clothes"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_clothes" />

    <item
        android:id="@+id/navigation_collections"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/title_collections" />



    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

</menu>
