<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:text="@string/title_tops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:text="@string/title_bottoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:text="@string/title_accy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_accy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>

